--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-yt-dlp>=2023.12.30
+yt-dlp==2023.12.30
 flask==2.3.3
 flask-cors==4.0.0
-moviepy==1.0.3
-pydub==0.25.1
 gunicorn==21.2.0
-numpy>=1.22.0
-google-api-python-client==2.108.0
+requests==2.31.0
 python-dotenv==1.0.0
